add ZeroEngine for sharded parameter initialization and update training script to utilize it

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ dependencies = [
     "uvicorn>=0.38.0",
 ]
 
-[tool.setuptools]
-package-dir = {"" = "src"}
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["engine*", "datasets*"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
