update parameter gathering and profiling in sharded modules, add matplotlib and networkx dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.121.0",
+    "matplotlib>=3.10.7",
+    "networkx>=3.5",
     "numpy>=2.3.4",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
