--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "datasets>=3.0.0",
     "fastapi>=0.121.0",
     "matplotlib>=3.10.7",
     "networkx>=3.5",
@@ -13,12 +14,13 @@ dependencies = [
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
     "torch>=2.9.0",
+    "transformers>=4.40.0",
     "uvicorn>=0.38.0",
 ]
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["engine*", "datasets*"]
+include = ["engine*", "data_sources*"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
