--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "datasets>=3.0.0",
     "fastapi>=0.121.0",
     "matplotlib>=3.10.7",
+    "memray>=1.14.0",
     "networkx>=3.5",
     "numpy>=2.3.4",
+    "psutil>=7.1.3",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
@@ -21,6 +23,11 @@ dependencies = [
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["engine*", "data_sources*"]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+pythonVersion = "3.13"
 
 [build-system]
 requires = ["setuptools>=61.0"]
