add curl installation to Dockerfiles for bert and dev environments

--- a/data_sources/bert/Dockerfile
+++ b/data_sources/bert/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.13-slim
 
 RUN pip install --no-cache-dir uv
+RUN apt-get update \
+ && apt-get install -y curl \
+ && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
