--- a/data_sources/dev/Dockerfile
+++ b/data_sources/dev/Dockerfile
@@ -2,6 +2,9 @@ FROM python:3.13-slim
 
 # Install uv for fast dependency management
 RUN pip install --no-cache-dir uv
+RUN apt-get update \
+ && apt-get install -y curl \
+ && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
