--- a/test/test_loss/Dockerfile
+++ b/test/test_loss/Dockerfile
@@ -1,9 +1,6 @@
 FROM python:3.13-slim
 
 RUN pip install --no-cache-dir uv
-RUN apt-get update \
- && apt-get install -y curl \
- && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -12,9 +9,15 @@ COPY pyproject.toml uv.lock* ./
 COPY README.md ./
 COPY engine/ ./engine/
 COPY data_sources/ ./data_sources/
+COPY test/ ./test/
 
 RUN uv sync --frozen --no-editable
 
 ENV PYTHONPATH=/app
 
-CMD ["uv", "run", "python", "-m", "data_sources.bert.bert_datahost"]
+CMD uv run torchrun \
+    --master-addr=${MASTER_ADDR} \
+    --master-port=${MASTER_PORT} \
+    --nnodes=1 \
+    --nproc-per-node=${WORLD_SIZE} \
+    test/test_loss/train_dist.py
