update docker-compose.yml to add service health condition for simple-datahost

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,8 @@ services:
       context: .
       dockerfile: test/test_simple_model/Dockerfile
     depends_on:
-      - simple-datahost
+      simple-datahost:
+        condition: service_healthy
     env_file: .env
     environment:
       - NUM_EPOCHS=10
