--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.121.0",
     "matplotlib>=3.10.7",
     "memray>=1.14.0",
+    "mpld3>=0.5.12",
     "networkx>=3.5",
     "numpy>=2.3.4",
     "psutil>=7.1.3",
